<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:animateLayoutChanges="true"
	android:background="#f2f2f2">

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="@color/colorPrimary"
		android:elevation="4dp"
		android:theme="@style/ToolBar"
		app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

	<ScrollView android:layout_below="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_marginTop="15dp"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:layout_marginBottom="60dp">
		<LinearLayout android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:animateLayoutChanges="true"
			android:orientation="vertical">
			<LinearLayout android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="0dp"
				android:orientation="vertical">
				<TextView android:id="@+id/lblUpload"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="#1f4d6f"
					android:textSize="15sp"
					android:text="GAMBAR PRODUK" />
				<LinearLayout android:layout_width="match_parent"
					android:layout_height="80dp"
					android:orientation="horizontal"
					android:layout_weight="4"
					android:layout_marginTop="10dp">
					<LinearLayout style="@style/ProfileLinearLayoutFotoSobat"
						android:layout_marginRight="4dp">
						<ImageView android:id="@+id/imageOne"
							android:onClick="imageOneClick"
							style="@style/ProfileImageViewFotoSobat" />
					</LinearLayout>
					<LinearLayout style="@style/ProfileLinearLayoutFotoSobat"
						android:layout_marginRight="4dp">
						<ImageView android:id="@+id/imageTwo"
							android:onClick="imageTwoClick"
							style="@style/ProfileImageViewFotoSobat" />
					</LinearLayout>
					<LinearLayout style="@style/ProfileLinearLayoutFotoSobat"
						android:layout_marginRight="4dp">
						<ImageView android:id="@+id/imageThree"
							android:onClick="imageThreeClick"
							style="@style/ProfileImageViewFotoSobat" />
					</LinearLayout>
					<LinearLayout style="@style/ProfileLinearLayoutFotoSobat">
						<ImageView android:id="@+id/imageFour"
							android:onClick="imageFourClick"
							style="@style/ProfileImageViewFotoSobat" />
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>

			<LinearLayout android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="15dp"
				android:paddingBottom="10dp"
				android:orientation="vertical"
				android:layout_marginTop="10dp">
				<TextView android:id="@+id/lblTellUs"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="#1f4d6f"
					android:textSize="15sp"
					android:text="DESKRIPSI PRODUK"
					android:visibility="gone"/>

				// NAMA BARANG
				<TextView android:id="@+id/lblNamaBarang"
					android:text="@string/nama_barang"
					android:layout_marginTop="5dp"
					style="@style/ProfileTitle" />
				<EditText android:id="@+id/txtItemName"
					android:singleLine="true"
					style="@style/ProfileEditText" />

				<LinearLayout style="@style/ProfileLinearLayout">
					// KATEGORI PRODUK
					<LinearLayout style="@style/ProfileLinearLayoutChild"
						android:layout_marginRight="8dp">
						<TextView android:id="@+id/lblKategori"
							android:text="@string/kategori_produk"
							style="@style/ProfileTitle" />
						<RelativeLayout android:id="@+id/relKategoriProduk"
							style="@style/ProfileRelativeLayout">
							<Spinner android:id="@+id/spinCategori"
								android:paddingLeft="10dp"
								style="@style/ProfileSpinner" />
							<TextView android:id="@+id/txtCategori"
								android:singleLine="true"
								android:text="Pilih Kategori"
								android:textCursorDrawable="@null"
								android:layout_marginTop="0dp"
								style="@style/ProfileEditText" />
							<ImageView style="@style/ProfileSpinnerImageView" />
						</RelativeLayout>
					</LinearLayout>

					// HARGA
					<LinearLayout style="@style/ProfileLinearLayoutChild">
						<TextView android:id="@+id/lblOriginalPrice"
							android:text="@string/harga"
							style="@style/ProfileTitle" />
						<EditText android:id="@+id/txtOriginalPrice"
							android:singleLine="true"
							android:inputType="number"
							style="@style/ProfileEditText" />
					</LinearLayout>
				</LinearLayout>

				<LinearLayout style="@style/ProfileLinearLayout">
					// NO TELP
					<LinearLayout style="@style/ProfileLinearLayoutChild"
						android:layout_marginRight="8dp">
						<TextView android:id="@+id/lblNoTelp"
							android:text="@string/no_telp"
							style="@style/ProfileTitle" />
						<EditText android:id="@+id/txtContactNumber"
							android:inputType="number"
							style="@style/ProfileEditText" />
					</LinearLayout>

					// STOCK
					<LinearLayout style="@style/ProfileLinearLayoutChild">
						<TextView android:id="@+id/lblStock"
							android:text="@string/jumlah_barang"
							style="@style/ProfileTitle" />
						<EditText android:id="@+id/txtStock"
							android:inputType="number"
							style="@style/ProfileEditText" />
					</LinearLayout>
				</LinearLayout>

				// DESKRIPSI
				<TextView android:id="@+id/lblDeskripsi"
					android:text="@string/deskripsi"
					android:layout_marginTop="20dp"
					style="@style/ProfileTitle" />
				<EditText android:id="@+id/txtDescription"
					android:layout_height="70dp"
					android:hint="Deskripsi mengenai apa yang Anda jual..."
					android:gravity="top|left"
					style="@style/ProfileEditText" />

				// ALAMAT
				<TextView android:id="@+id/lblAlamat"
					android:text="@string/alamat"
					android:layout_marginTop="20dp"
					style="@style/ProfileTitle" />
				<EditText android:id="@+id/txtAddress"
					android:layout_height="70dp"
					android:gravity="top|left"
					style="@style/ProfileEditText" />

			</LinearLayout>
		</LinearLayout>
	</ScrollView>

	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_alignParentBottom="true"
		android:layout_weight="2">
		<TextView android:id="@+id/txtCancel"
			android:layout_width="match_parent"
			android:layout_height="45dp"
			android:textColor="#fff"
			android:textSize="14sp"
			android:text="Batal"
			android:background="@drawable/custom_button_message"
			android:clickable="true"
			android:gravity="center"
			android:onClick="btnCancelClick"
			android:layout_weight="1"
			android:textAllCaps="true"/>
		<TextView android:id="@+id/txtSubmit"
			android:layout_width="match_parent"
			android:layout_height="45dp"
			android:textColor="#fff"
			android:textSize="14sp"
			android:text="Kirim"
			android:background="@drawable/custom_button_call"
			android:clickable="true"
			android:gravity="center"
			android:onClick="btnSubmitClick"
			android:layout_weight="1"
			android:textAllCaps="true" />
	</LinearLayout>

</RelativeLayout>